--- a/css/light.css
+++ b/css/light.css
@@ -69,6 +69,10 @@ h1.hone {
   font-size: 60px;
 }
 
+ #myCarousel {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+
 .item img {
   width: 100%;
   height: 100% !important;
@@ -395,6 +399,10 @@ input:checked + .slider:before {
 	padding-bottom: 30px;
 	text-align: center;
 	padding-top: 30px;
+  position: relative;
+  animation-name: title; 
+    animation-duration: 3s;
+
 }
 
 .page-title-new h2 {
@@ -423,6 +431,9 @@ input:checked + .slider:before {
 .aboutslider,
 .about-content {
 	padding: 60px 0;
+  animation-name: title;
+    animation-duration: 3s;
+    position: relative;
 }
 
 .about-content p {
