--- a/css/light.css
+++ b/css/light.css
@@ -547,6 +547,7 @@ input:checked + .slider:before {
 	padding: 10px;
 	background-color: #7cc576 !important;
 	width: 100%;
+  color: #FFF;
 }
 
 .price_table {
