Commit 32, used flexbox on contact page, and worked on responsiveness for contact page. enabled toggle for nav bar in contacts page aswell. Bootstrap layout for contact and maps also done. Googlemap function also done

--- a/css/dark.css
+++ b/css/dark.css
@@ -40,6 +40,10 @@ html {
   display: none;
 }
 
+#cpage {
+  display: none;
+}
+
 #mh {
   display: none;
 }
@@ -584,6 +588,15 @@ input:checked + .slider:before {
 /*  width: 25%;*/
   margin: 0 auto;
 }
+
+#Googlemaps {
+        width: 550px;
+        height: 470px;
+        padding-left: 2%;
+        padding-right: 2%;
+        background-color: grey;
+      }
+
 
 .hone {
   font-family: 'Montserrat', sans-serif;
@@ -1582,6 +1595,20 @@ float:left;
   #ppage .navbar-header {
     background: #7cc576;
   }
+
+  #cpage .title a p {
+    font-size: 21px;
+  }
+  .homepage-menu .navbar-toggle {
+    margin: 15px 10px 0 !important;
+  }
+  #cpage .title {
+    position: relative;
+    z-index: 9;
+  }
+  #cpage .navbar-header {
+    background: #7cc576;
+  }
   .topContent,
   .middleContent,
   .bottomContent {
@@ -1662,6 +1689,11 @@ float:left;
     margin-bottom: 0;
     margin-top: 5px;
   }
+
+  #cpage .title {
+    margin-bottom: 0;
+    margin-top: 5px;
+  }
   .mainHeader nav ul {
     border-bottom: 0;
     margin: 0;
@@ -1700,11 +1732,24 @@ ul.banner-social-buttons {
   ul.banner-social-buttons {
     margin-top: 15px;
   }
+  #Googlemaps {
+    display: none;
+  }
+  #contact-new {
+display: flex;
+    align-items: center;  }
 }
 
 @media (max-width: 767px) {
     .page-title-new h2::after {
     left: 38.5%;
+  }
+  #Googlemaps {
+    display: none;
+  }
+  #contact-new {
+display: flex;
+    align-items: center;  
   }
   .price_table {
     margin-bottom: 0px;
@@ -1724,6 +1769,13 @@ ul.banner-social-buttons {
     margin-top: 13px;
   }
   #ppage .title a p {
+    font-size: 14px;
+    margin: 3% 0% 0% 0%;
+  }
+  #cpage .title {
+    margin-top: 13px;
+  }
+  #cpage .title a p {
     font-size: 14px;
     margin: 3% 0% 0% 0%;
   }
