--- a/css/light.css
+++ b/css/light.css
@@ -203,6 +203,8 @@ h1.hone {
   float: left;
 /*  margin-top: -10%;*/
   font-size: 30px;
+  text-shadow: 2px 2px 2px #FFF;
+
 }
 
 #buttons {
@@ -1756,7 +1758,7 @@ float:left;
     height: 400px;
     margin-top: 250px;
   }
-  
+
 }
 
 ul.banner-social-buttons {
